[package]
name = "rpg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bevy = { version = "0.11.2", features = ["dynamic_linking", "vorbis", "wav", "mp3", "flac"] }
clap = { version = "4.4.4", features = ["derive"] }
fastrand = "2.0.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
